# projectbuilder

./: Makefile  README.md  make
docker/: Makefile
git/: Makefile
go/: Makefile
haskell/: Makefile
license/: Makefile
prove/: Makefile
readme/: Makefile
samples/go-docker-simple/: Dockerfile  README.md  main.go
samples/haskell-docker-fileserver/: fileserver.cabal  stack.yaml
samples/haskell-docker-fileserver/src/: FileServer.hs
travis/: Makefile
