name:          fileserver
version:       1.0.0.0
build-type:    Simple
cabal-version: >=1.10

executable fileserver
 hs-source-dirs: src
 main-is:        FileServer.hs
 build-depends:  shakespeare, wai-app-static, wai-extra, warp, base >=4.8, bytestring >= 0.10, http-types >= 0.9, wai, filepath >= 1.4, blaze-html >= 0.8
 default-language: Haskell2010
